--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image: ^3.0.8
   syncfusion_flutter_pdf: ^19.3.57-beta
   file_picker: ^4.3.0
+  sembast: ^3.1.1+1
 
 dev_dependencies:
   flutter_test:
