--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   file_picker: ^4.3.0
   sembast: ^3.1.1+1
   permission_handler: ^9.0.2
+  csv: ^5.0.1
 
 dev_dependencies:
   flutter_test:
