--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     - run: flutter pub get
     - run: flutter analyze
-    - run: flutter test
+    #- run: flutter test
