--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,4 +21,4 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: release-apk
-        path: release/app-release.apk
+        path: build/app/outputs/flutter-apk/app-release.apk
