--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,12 @@ dependencies:
   awesome_notifications: ^0.6.21
   numberpicker: ^2.1.1
   flutter_slidable: ^1.2.0
+  device_info_plus: ^3.2.3
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   flutter_lints: ^1.0.0
   flutter_launcher_icons: ^0.9.2
