--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.1.2+1
+version: 1.2.2+1
 
 environment:
   sdk: ">=2.15.0-116.0.dev <3.0.0"
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter         
   camera: ^0.9.3
   path_provider: ^2.0.3
   intl: ^0.17.0
@@ -40,6 +42,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
 flutter_icons:
   ios: false
