--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.3.0+1
+version: 1.3.2+1
 
 environment:
   sdk: ">=2.15.0-116.0.dev <3.0.0"
@@ -29,6 +29,7 @@ dependencies:
   numberpicker: ^2.1.1
   flutter_slidable: ^1.2.0
   device_info_plus: ^3.2.3
+  graphic: ^0.10.4
 
 dev_dependencies:
   flutter_test:
