--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,44 +1,43 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.3.2+1
+version: 1.4.1+1
 
 environment:
-  sdk: ">=2.15.0-116.0.dev <3.0.0"
+  sdk: ">=3.3.2 <3.22.3"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations: 
     sdk: flutter         
-  camera: ^0.9.3
-  path_provider: ^2.0.3
-  intl: ^0.17.0
-  get: ^4.3.8
-  shared_preferences: ^2.0.8
-  google_ml_vision: ^0.0.7
-  image: ^3.0.8
-  syncfusion_flutter_pdf: ^19.3.57-beta
-  file_picker: ^4.3.0
-  sembast: ^3.1.1+1
-  permission_handler: ^9.0.2
-  csv: ^5.0.1
-  mockito: ^5.1.0
-  build_runner: ^2.1.10
-  awesome_notifications: ^0.6.21
-  numberpicker: ^2.1.1
-  flutter_slidable: ^1.2.0
-  device_info_plus: ^3.2.3
-  graphic: ^0.10.4
+  camera: ^0.11.0+2
+  path_provider: ^2.1.5
+  intl: ^0.19.0
+  get: ^4.6.6
+  shared_preferences: ^2.3.3
+  google_ml_vision: ^0.0.8
+  image: ^4.3.0
+  syncfusion_flutter_pdf: ^27.1.58
+  file_picker: ^8.1.3
+  sembast: ^3.7.2
+  permission_handler: ^11.3.1
+  csv: ^6.0.0
+  awesome_notifications: ^0.9.3
+  numberpicker: ^2.1.2
+  flutter_slidable: ^3.1.1
+  device_info_plus: ^11.1.1
+  graphic: ^2.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
-  flutter_launcher_icons: ^0.9.2
-  test: ^1.17.12
+  flutter_lints: ^4.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.7
+  flutter_launcher_icons: ^0.14.1
 
 
 flutter:
