--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -4,7 +4,8 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-all.zip
 #distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-all.zip
 #distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
 # distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-all.zip
