--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,40 +1,45 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.4.5+1
+version: 1.4.6+1
 
 environment:
-  sdk: ">=3.3.2 <3.22.3"
+  sdk: ">=3.2.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations: 
-    sdk: flutter         
-  camera: ^0.11.0+2
+    sdk: flutter
+  intl: ^0.20.2
   path_provider: ^2.1.5
-  intl: ^0.19.0
   get: ^4.6.6
   shared_preferences: ^2.3.3
-  google_ml_vision: ^0.0.8
+#  google_ml_vision: ^0.0.8
   image: ^4.3.0
-  syncfusion_flutter_pdf: ^27.1.58
-  file_picker: ^8.1.3
+  syncfusion_flutter_pdf: ^29.2.5
+  file_picker: ^10.1.9
   sembast: ^3.7.2
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   csv: ^6.0.0
-  awesome_notifications: ^0.9.3
+  awesome_notifications: ^0.10.1
   numberpicker: ^2.1.2
-  flutter_slidable: ^3.1.1
+  flutter_slidable: ^4.0.0
   device_info_plus: ^11.1.1
   graphic: ^2.5.0
+  photo_data_picker:
+    git:
+      url: https://github.com/lavruh/photo_data_picker.git
+  file: ^7.0.1
+  path: ^1.9.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   mockito: ^5.4.4
   build_runner: ^2.4.7
   flutter_launcher_icons: ^0.14.1
