--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.5.2+1
+version: 1.5.3+1
 
 environment:
   sdk: ">=3.2.2 <4.0.0"
@@ -33,6 +33,8 @@ dependencies:
   file: ^7.0.1
   path: ^1.9.1
   dart_eval: ^0.8.1
+  file_provider:
+    git: https://github.com/lavruh/file_provider.git
 
 
 dev_dependencies:
