--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.5.3+1
+version: 1.5.4+1
 
 environment:
   sdk: ">=3.2.2 <4.0.0"
@@ -51,6 +51,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/calculate.png
+    - assets/measure.png
 
 flutter_icons:
   ios: false
