--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -7,7 +7,7 @@ jobs:
     name: flutter release apk
     runs-on: ubuntu-latest
     env:
-      APP_NAME: tagged_todos_organizer
+      APP_NAME: value_collector
       BUILD_PATH: build/app/outputs/flutter-apk/
 
     steps:
@@ -33,7 +33,7 @@ jobs:
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Build artifacts
-        run: flutter build apk --release --flavor production
+        run: flutter build apk --release --flavor dev
 
       - name: Rename file
         run: mv ${{ env.BUILD_PATH }}app-production-release.apk ${{ env.BUILD_PATH }}${{ env.APP_NAME }}-${{ steps.read-version.outputs.version-number }}.apk
