add highlighting of new values update git hub action script

--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -36,7 +36,7 @@ jobs:
         run: flutter build apk --release --flavor dev
 
       - name: Rename file
-        run: mv ${{ env.BUILD_PATH }}app-production-release.apk ${{ env.BUILD_PATH }}${{ env.APP_NAME }}-${{ steps.read-version.outputs.version-number }}.apk
+        run: mv ${{ env.BUILD_PATH }}app-dev-release.apk ${{ env.BUILD_PATH }}${{ env.APP_NAME }}-${{ steps.read-version.outputs.version-number }}.apk
 
       - name: Release
         uses: softprops/action-gh-release@v1
