--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rh_collector
 description: A new Flutter project.
 publish_to: 'none' 
-version: 1.5.5+1
+version: 1.5.6+1
 
 environment:
   sdk: ">=3.2.2 <4.0.0"
@@ -35,6 +35,7 @@ dependencies:
   dart_eval: ^0.8.1
   file_provider:
     git: https://github.com/lavruh/file_provider.git
+  flutter_colorpicker: ^1.1.0
 
 
 dev_dependencies:
